--- a/controller.Presence/package.json
+++ b/controller.Presence/package.json
@@ -22,6 +22,7 @@
     "enum": "^3.0.4",
     "got": "^14.4.7",
     "node-file-dialog": "^1.0.3",
+    "node-osc": "^11.0.0",
     "obs-websocket-js": "^5.0.6",
     "precision-timeout-interval": "^4.3.0"
   }
